v0.4 - xx, December 2016
  - fix: game. removed initial flicker when the screen was displayed
  - fix: game. press space before "get set go"
		needed when played with the unijoysticle.
		just press "space" once you are on top of the unicycle
  - fix: game. does not use the TOD anymore
		the time should run at the speed of the machine
		in order to make the high scores meaningful

v0.3 - 29 July, 2016 - CommVEx release
  - new: added bot
  - new: added instructions
  - new: high scores work! and are stored in disk (KERNAL routine)
		 has better default names / default scores
  - fix: restore key returns to main menu while playing
  - controls:
     - road race: joy left + right
	 - cyclo cross: joy fire
	 - cross country: joy left + right + fire
  - fix: expected joy value is the correct one
  - about: vertical scroll
  - level cross country: re-done from scratch almost
  - level cyclo cross: added eye animations and little fixes
  - level road race: added tube animations

v0.2.4 - 8 July, 2016

  - new intro screen: unijoysticle logo
  - new music for main menu: popcorn
  - in-game music
  - Cyclocross event added
  - About added
  - PAL / NSTC / Drean fixes
  - Riders can jump
  - Riders can't go above certain height
  - Jumping doesn't generate that much resistance


v0.2 - June, 2016

  - new menu system
  - joystick needs to be moved up,right,down,left instead of right,left
  - better maps
  - new memory model: it is going to be a single-load game
  - physics: resistance + velocity + crashing: improved


v0.1 - April 6, 2016
  - initial public release